update to CUBA 7.0

--- a/modules/web/src/de/diedavids/cuba/entitypin/web-app.properties
+++ b/modules/web/src/de/diedavids/cuba/entitypin/web-app.properties
@@ -43,3 +43,4 @@ cuba.web.theme = halo
 cuba.web.foldersPaneEnabled=false
 cuba.availableLocales = English|en
 cuba.localeSelectVisible = false
+cuba.themeConfig=com/haulmont/cuba/havana-theme.properties com/haulmont/cuba/halo-theme.properties com/haulmont/cuba/hover-theme.properties
